<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ro.pub.cs.systems.pdsd.lab03.phonedialer.PhoneDialerActivity" >

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/editText"
        android:inputType="phone" />
    
    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="6" 
        android:columnCount="3"
        android:alignmentMode="alignMargins"
        android:layout_gravity="center"
        android:gravity="center">
        
        <ImageButton
            android:id="@+id/back_space"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_column="2"
            android:layout_gravity="center"
            android:layout_row="0"
            android:background="@null"
            android:contentDescription="@string/backspace"
            android:src="@drawable/backspace" />

        <Button
            android:id="@+id/digit_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="1"
            android:text="@string/one" />

		<Button
		    android:id="@+id/digit_two"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_column="1"
		    android:layout_gravity="center"
		    android:layout_row="1"
		    android:text="@string/two" />
		
		<Button
		    android:id="@+id/digit_three"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_column="2"
		    android:layout_gravity="center"
		    android:layout_row="1"
		    android:text="@string/three" />
		
		<Button
		    android:id="@+id/digit_four"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_column="0"
		    android:layout_gravity="center"
		    android:layout_row="2"
		    android:text="@string/four" />

		<Button
		    android:id="@+id/digit_five"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_column="1"
		    android:layout_gravity="center"
		    android:layout_row="2"
		    android:text="@string/five" />

		<Button
		    android:id="@+id/digit_six"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_column="2"
		    android:layout_gravity="center"
		    android:layout_row="2"
		    android:text="@string/six" />

		<Button
		    android:id="@+id/digit_seven"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_column="0"
		    android:layout_gravity="center"
		    android:layout_row="3"
		    android:text="@string/seven" />

		<Button
		    android:id="@+id/digit_eight"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_column="1"
		    android:layout_gravity="center"
		    android:layout_row="3"
		    android:text="@string/eight" />

		<Button
		    android:id="@+id/digit_nine"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_column="2"
		    android:layout_gravity="center"
		    android:layout_row="3"
		    android:text="@string/nine" />

		<Button
		    android:id="@+id/star"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_column="0"
		    android:layout_gravity="center"
		    android:layout_row="4"
		    android:text="@string/star" />

		<Button
		    android:id="@+id/digit_zero"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_column="1"
		    android:layout_gravity="center"
		    android:layout_row="4"
		    android:text="@string/zero" />

		<Button
		    android:id="@+id/dies"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_column="2"
		    android:layout_gravity="center"
		    android:layout_row="4"
		    android:text="@string/dies" />	

		<ImageButton
		    android:id="@+id/call"
		    android:layout_width="60dp"
		    android:layout_height="60dp"
		    android:layout_column="0"
		    android:layout_gravity="center"
		    android:layout_row="5"
		    android:src="@drawable/call"
		    android:contentDescription="@string/call"/>
		
		<ImageButton
		    android:id="@+id/hung"
		    android:src="@drawable/hangup"
		    android:layout_row="5"
		    android:layout_column="2"
		    android:layout_width="60dp"
		    android:layout_height="60dp"
		    android:layout_gravity="center"
		    android:contentDescription="@string/hung" />    

	</GridLayout>
</LinearLayout>